chapter05c_istio-ambientmesh/networking/L7-authorization-policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: layer7-authz
  labels:
    content: layer7-authz
spec:
  selector:
    matchLabels:
     istio.io/gateway-name: handson
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/curl
    to:
    - operation:
        methods:
        - GET
        # ports:
        # - "8080"
